--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-This is the homepage.
+<h1>Sociology 345  Lehman College</h1>
+<h2>Quantitative Analysis of Sociological Data</h2>
+<p>This course introduces students to modern data analysis strategies in sociology.</p>
