--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h2 class="project-name">Soc345.GitHub.io</h1>
-      <h1 class="project-tagline">Soc 345 Pages</h2>
+      <h2 class="project-name">Soc345</h1>
+      <h1 class="project-tagline">A sociology course at Lehman College</h2>
     </section>
 
     <section class="main-content">
